A new version of requirements doc file

--- a/documentation/meetings/20161021.md
+++ b/documentation/meetings/20161021.md
@@ -2,6 +2,8 @@
 * Nguyễn Trường Giang: Đã hoàn thành back-end
 
 # Công việc cần làm:
-*_Hoàn thành phần requirements cho project_*
+**_Hoàn thành phần requirements cho project_**
+
 Thống nhất sử dụng form IEEE Std 830-1998 cho văn bản
+
 Các thành viên sau đó hoàn chỉnh các user case
